# duckbot

./: .gitignore  README.md  consts.py  docker-compose.sql  docker-compose.yaml  jl.sh  main.py  pyproject.toml  requirements.txt  run.sh  test.py
bot/: __init__.py  launcher.py  log.py
configs/: config_prod.json  config_staging.json
duckbot/: alembic.ini  consts.py  test.ipynb
duckbot/alembic/: env.py
duckbot/alembic/versions/: 171f4581e8e9_create_position_table.py  1aef71d0d1ec_add_market_name_to_market_table.py  1dc3ce004a6e_create_market_table.py  7937534aa760_initial_migration.py  (+2 more)
duckbot/bot/: client.py  launcher.py
duckbot/configs/: config_prod.json  config_staging.json
duckbot/contracts/: Oracle.sol  PredictionMarket.sol  __init__.py  simpleMultisig.sol
duckbot/database/: __init__.py  db_handler.py
duckbot/discord/: trading_alert.py  webhook.py
duckbot/handlers/: airdao_handler.py
duckbot/market/: orderbook.py  position.py  types.py
duckbot/math/: __init__.py  account.py  orderbook.py  position.py
duckbot/models/: __init__.py  market.py  position.py  user.py  wallet.py
duckbot/routes/: __init__.py  explorer.py  main_menu.py  prediction.py  trade.py  wallet.py
duckbot/utils/: __init__.py  cipher.py  fetch_balance.py  logger.py  multisig.py  parse_args.py  rounding.py
handlers/: __init__.py  airdao_handler.py
notebooks/: ob_demo.ipynb  shuri_scrap.ipynb  test_prod.ipynb
notebooks/lib_scrap/: order_book.py
routes/: __init__.py  abi.py  explorer.py  main_menu.py  trade.py  wallet.py
utils/: __init__.py  retry.py
(+7 files in other folders)
